# hhs-os-startupwiz

./: Makefile.am  configure.ac
.github/workflows/: build.yml
data/: Makefile.am  startup-wiz.ui
debian/: control  piwiz.postrm  startup-wiz-hs.install  startup-wiz-hs.preinst  startup-wiz.install
po/: en_GB.po
src/: Makefile.am  piwiz.c
